--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -7,8 +7,9 @@ edition = "2021"
 axum = "0.8"
 env_logger = "0.11"
 log = "0.4"
-solana-client = "2.1"
-solana-transaction-status = "2.1"
+solana-client = "2.2"
+solana-sdk = "2.2"
+solana-transaction-status = "2.2"
 tokio = { version = "1", features = ["full"] }
 serde = { version = "1.0.217", features = ["derive"] }
 serde_json = "1.0.138"
