--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -8,9 +8,17 @@ axum = "0.8"
 env_logger = "0.11"
 log = "0.4"
 solana-client = "2.2"
-solana-sdk = "2.2"
 solana-transaction-status = "2.2"
 tokio = { version = "1", features = ["full"] }
 serde = { version = "1.0.217", features = ["derive"] }
 serde_json = "1.0.138"
 tower-http = { version = "0.6", features = ["cors"] }
+
+[dev-dependencies]
+async-trait = "0.1.86"
+env_logger = "0.11"
+tokio = { version = "1", features = ["full"] }
+solana-client = "2.2"
+solana-sdk = "2.2"
+solana-commitment-config = "2.2"
+solana-reward-info = "2.2"
