--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -10,12 +10,12 @@ log = "0.4"
 solana-client = "2.2"
 solana-transaction-status = "2.2"
 tokio = { version = "1", features = ["full"] }
-serde = { version = "1.0.217", features = ["derive"] }
-serde_json = "1.0.138"
-tower-http = { version = "0.6", features = ["cors"] }
+serde = { version = "1", features = ["derive"] }
+serde_json = "1"
+tower-http = { version = "0.6", features = ["cors", "fs"] }
 
 [dev-dependencies]
-async-trait = "0.1.86"
+async-trait = "0.1"
 env_logger = "0.11"
 solana-sdk = "2.2"
 solana-commitment-config = "2.2"
